[package]
name = "bootstrap_cache"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Bootstrap cache functionality for the Safe Network"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
fs2 = "0.4.3"
libp2p = { version = "0.53", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8.1"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full", "sync"] }
tracing = "0.1"
url = "2.4.0"

[dev-dependencies]
wiremock = "0.5"
tokio = { version = "1.0", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
missing_docs_in_private_items = "warn"
