[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Safe Network EVM"
edition = "2021"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "evm_testnet"
repository = "https://github.com/maidsafe/safe_network"
version = "0.1.4-rc.2"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs-next = "~2.0.0"
evmlib = { path = "../evmlib", version = "0.1.4-rc.2" }
sn_evm = { path = "../sn_evm", version = "0.1.4-rc.2" }
tokio = { version = "1.40", features = ["rt-multi-thread", "signal"] }

[lints]
workspace = true
