[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Safe Network EVM"
edition = "2021"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "evmlib"
repository = "https://github.com/maidsafe/safe_network"
version = "0.1.0"

[dependencies]
alloy = { version = "0.2", features = ["full", "provider-anvil-node"] }
serde = "1.0"
thiserror = "1.0"
tokio = "1.38.0"
rand = "0.8.5"

[lints]
workspace = true
