[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Safe Network EVM"
edition = "2021"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "evmlib"
repository = "https://github.com/maidsafe/safe_network"
version = "0.1.0"

[features]
wasm-bindgen = ["alloy/wasm-bindgen"]

[dependencies]
alloy = { version = "0.4.2", default-features = false, features = ["std", "reqwest-rustls-tls", "provider-anvil-node", "sol-types", "json", "signers", "contract", "signer-local", "network"] }
dirs-next = "~2.0.0"
serde = "1.0"
thiserror = "1.0"
tracing = { version = "~0.1.26" }
tokio = "1.38.0"
rand = "0.8.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.12", features = ["js"] }

[lints]
workspace = true
