[package]
name = "libautonomi"
version = "0.1.0"
edition = "2021"

[features]
local-discovery = ["sn_client/local-discovery"]

[dependencies]
bip39 = "2.0.0"
bls = { package = "blsttc", version = "8.0.1" }
bytes = { version = "1.0.1", features = ["serde"] }
libp2p = "0.53"
rand = "0.8.5"
rmp-serde = "1.1.1"
self_encryption = "0.29.2"
serde = { version = "1.0.133", features = ["derive", "rc"] }
sn_client = { path = "../sn_client" }
sn_protocol = { version = "0.17.5", path = "../sn_protocol" }
sn_transfers = { path = "../sn_transfers", version = "0.18.9" }
thiserror = "1.0.23"
tokio = { version = "1.35.0", features = ["sync", "fs"] }
tracing = { version = "~0.1.26" }
walkdir = "2.5.0"
xor_name = "5.0.0"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
