[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Safe Network NAT detection tool"
edition = "2021"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "nat-detection"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_network"
version = "0.2.4"

[[bin]]
name = "nat-detection"
path = "src/main.rs"

[features]
nightly = []

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
color-eyre = { version = "0.6", default-features = false }
futures = "~0.3.13"
libp2p = { version = "0.54.1", features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "autonat",
    "identify",
    "macros",
    "upnp",
] }
sn_build_info = { path = "../sn_build_info", version = "0.1.12" }
sn_networking = { path = "../sn_networking", version = "0.18.1" }
sn_protocol = { path = "../sn_protocol", version = "0.17.8" }
tokio = { version = "1.32.0", features = ["full"] }
tracing = { version = "~0.1.26" }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
