[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Autonomi NAT detection tool"
edition = "2021"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "nat-detection"
readme = "README.md"
repository = "https://github.com/maidsafe/autonomi"
version = "0.2.12-rc.2"

[[bin]]
name = "nat-detection"
path = "src/main.rs"

[features]
nightly = []

[dependencies]
ant-build-info = { path = "../ant-build-info", version = "0.1.20-rc.2" }
ant-networking = { path = "../ant-networking", version = "0.3.0-rc.2" }
ant-protocol = { path = "../ant-protocol", version = "0.3.0-rc.2" }
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
color-eyre = { version = "0.6", default-features = false }
futures = "~0.3.13"
libp2p = { version = "0.54.1", features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "autonat",
    "identify",
    "macros",
    "upnp",
] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = { version = "~0.1.26" }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
