[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Node Launchpad"
name = "node-launchpad"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
homepage = "https://maidsafe.net"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_network"
build = "build.rs"

[[bin]]
name = "node-launchpad"
path = "src/bin/tui/main.rs"

[dependencies]
better-panic = "0.3.0"
clap = { version = "4.4.5", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
color-eyre = "0.6.2"
config = "0.14.0"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
dirs-next = "~2.0.0"
futures = "0.3.28"
human-panic = "1.2.0"
json5 = "0.4.1"
lazy_static = "1.4.0"
libc = "0.2.148"
log = "0.4.20"
pretty_assertions = "1.4.0"
ratatui = { version = "0.26.0", features = ["serde", "macros"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
signal-hook = "0.3.17"
sn-node-manager = { version = "0.7.5", path = "../sn_node_manager" }
sn_peers_acquisition = { version = "0.2.11", path = "../sn_peers_acquisition" }
sn-releases = "0.2.1"
sn_service_management = { version = "0.2.5", path = "../sn_service_management" }
strip-ansi-escapes = "0.2.0"
strum = { version = "0.26.1", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }
tui-input = "0.8.0"
which = "6.0.1"
nix = { version = "0.28.0", features = ["user"] }

[build-dependencies]
vergen = { version = "8.2.6", features = ["build", "git", "gitoxide", "cargo"] }
