[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Node Launchpad"
name = "node-launchpad"
version = "0.4.3-rc.3"
edition = "2021"
license = "GPL-3.0"
homepage = "https://maidsafe.net"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_network"
build = "build.rs"

[[bin]]
name = "node-launchpad"
path = "src/bin/tui/main.rs"

[features]
nightly = []

[dependencies]
atty = "0.2.14"
better-panic = "0.3.0"
chrono = "~0.4.19"
clap = { version = "4.4.5", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
color-eyre = "0.6.2"
config = "0.14.0"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
dirs-next = "~2.0.0"
futures = "0.3.28"
fs_extra = "1.3.0"
human-panic = "1.2.0"
itertools = "~0.12.1"
json5 = "0.4.1"
libc = "0.2.148"
log = "0.4.20"
pretty_assertions = "1.4.0"
prometheus-parse = "0.2.5"
ratatui = { version = "0.29.0", features = ["serde", "macros", "unstable-widget-ref"] }
reqwest = { version = "0.12.2", default-features = false, features = [
    "rustls-tls-manual-roots",
] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
signal-hook = "0.3.17"
sn_build_info = { path = "../sn_build_info", version = "0.1.18-rc.3" }
sn_evm = { path = "../sn_evm", version = "0.1.3-rc.3" }
sn-node-manager = { version = "0.11.2-rc.3", path = "../sn_node_manager" }
sn_peers_acquisition = { version = "0.5.6-rc.3", path = "../sn_peers_acquisition" }
sn_protocol = { path = "../sn_protocol", version = "0.17.14-rc.3" }
sn-releases = "~0.2.6"
sn_service_management = { version = "0.4.2-rc.3", path = "../sn_service_management" }
strip-ansi-escapes = "0.2.0"
strum = { version = "0.26.1", features = ["derive"] }
sysinfo = "0.30.12"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }
tui-input = "0.8.0"
which = "6.0.1"
faccess = "0.2.4"
throbber-widgets-tui = "0.8.0"
regex = "1.11.0"
arboard = "3.4.1"

[build-dependencies]
vergen = { version = "8.2.6", features = ["build", "git", "gitoxide", "cargo"] }

[dev-dependencies]
tempfile = "3.12.0"
