[package]
name = "safenode"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
homepage = "https://maidsafe.net"

[[bin]]
name = "safenode"
path = "src/bin/safenode/main.rs"

[[bin]]
name = "safe"
path = "src/bin/safe/mod.rs"

[[bin]]
name = "faucet"
path = "src/bin/faucet.rs"

[features]
default=[]
local-discovery=["libp2p/mdns"]
otlp = [
    "opentelemetry",
    "opentelemetry-otlp",
    "opentelemetry-semantic-conventions",
    "tracing-opentelemetry",
]

[dependencies]
async-trait = "0.1"
bincode = "1.3.1"
bls = { package = "blsttc", version = "8.0.1" }
bytes = { version = "1.0.1", features = ["serde"] }
clap = { version = "4.2.1", features = ["derive"]}
crdts = { version = "7.3", default-features = false, features = ["merkle"] }
chrono = "~0.4.19"
custom_debug = "~0.5.0"
dirs-next = "~2.0.0"
eyre = "0.6.8"
file-rotate = "0.7.3"
futures = "~0.3.13"
hex = "~0.4.3"
itertools = "~0.10.1"
lazy_static = "~1.4.0"
libp2p = { version="0.51", features = ["tokio", "dns", "kad", "macros", "request-response", "identify", "autonat", "mplex", "noise", "tcp", "yamux"] }
lru_time_cache = "0.11.11"
opentelemetry = { version = "0.17", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.10", optional = true }
opentelemetry-semantic-conventions = { version = "0.9.0", optional = true }
prost = { version = "0.9" }
rand = { version = "~0.8.5", features = ["small_rng"] }
rmp-serde = "1.1.1"
rayon = "~1.5.1"
self_encryption = "~0.28.0"
serde = { version = "1.0.133", features = [ "derive", "rc" ]}
sn_dbc = { version = "17.0.0", features = ["serdes"] }
thiserror = "1.0.23"
tiny-keccak = "~2.0.2"
tokio = { version = "1.17.0", features = ["fs", "io-util", "macros", "parking_lot", "rt", "sync", "time"] }
tokio-stream = { version = "~0.1.12" }
tonic = { version = "0.6.2" }
tracing = { version = "~0.1.26" }
tracing-appender = "~0.2.0"
tracing-core = "0.1.30"
tracing-opentelemetry = { version = "0.17", optional = true }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
walkdir = "2.3.1"
xor_name = "5.0.0"
tracing-log = { version = "0.1.3", features = ["env_logger"] }

[dev-dependencies]
assert_fs = "1.0.0"
assert_matches = "1.5.0"
proptest = { version = "1.0.0" }
quickcheck = "1.0.3"

[build-dependencies]
tonic-build = { version = "0.6.2" }
